Edited the about me section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="sub-section" id="about-me">
         <div class="information">
             <h2>About Me</h2>
-            <p>Hello. My name is Lord Niceth. I am a Software Developer .</p>
+            <p>Hello. My name is Lord Niceth. I am a Software Developer and UI/UX Designer .</p>
         </div>
         <div class="headshot-container">
             <img class="headshot" src="src/images/headshot.jpg" alt="Lord Niceth headshot"/>
